<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_signup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".SignUpActivity"
    >

    <TextView
        android:id="@+id/txt_title_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_title_signup"
        android:textColor="@color/pure_WHITE"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_sub_title_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sub_title_signup"
        android:textColor="@color/pure_WHITE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_signup" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"

        app:cardBackgroundColor="@color/pure_WHITE"
        app:cardCornerRadius="20dp"

        app:cardElevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_title_signup">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_layout_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_name_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/round_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/name"
                android:inputType="text"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:met_baseColor="@color/base_color"

                app:met_errorColor="@color/base_color"
                app:met_floatingLabel="highlight"

                app:met_floatingLabelText="@string/name"
                app:met_primaryColor="@color/base_color"
                android:drawableLeft="@drawable/round_person_24" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/round_email_24"

                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"


                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/edt_name_signup"
                app:layout_constraintVertical_bias="0.0"
                app:met_baseColor="@color/base_color"
                app:met_errorColor="@color/base_color"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Email"
                app:met_primaryColor="@color/base_color"
                android:drawableLeft="@drawable/round_email_24" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/round_lock_24"
                android:drawablePadding="10dp"

                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_email_signup"
                app:layout_constraintVertical_bias="0.0"
                app:met_baseColor="@color/base_color"
                app:met_errorColor="@color/base_color"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Password"
                app:met_iconLeft="@drawable/ic_person_red"
                app:met_maxCharacters="15"
                app:met_primaryColor="@color/base_color"
                android:drawableLeft="@drawable/round_lock_24" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_confirm_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/round_lock_24"
                android:drawablePadding="10dp"

                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_password_signup"
                app:met_baseColor="@color/base_color"
                app:met_errorColor="@color/base_color"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Confirm Password"
                app:met_iconLeft="@drawable/ic_person_red"
                app:met_maxCharacters="15"
                app:met_primaryColor="@color/base_color"
                android:drawableLeft="@drawable/round_lock_24" />

            <CheckBox
                android:id="@+id/ckb_terms_conditions_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/base_color"
                android:fontFamily="sans-serif"
                android:text="@string/i_accept"
                android:textColor="@color/base_color"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password_signup"
                android:layout_marginLeft="8dp" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_signup"
                android:textColor="@color/pure_WHITE"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ckb_terms_conditions_signup" />

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/txt_terms"
                android:textColor="@color/base_color"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_signup"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/no_account_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/already_have_account"
        android:textColor="@color/pure_WHITE"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
</androidx.constraintlayout.widget.ConstraintLayout>